card hover alignment fix

--- a/styles.scss
+++ b/styles.scss
@@ -3,12 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 
-
-
-
-
-
-
 //////////////////////////////////////////////////////////// 
 // procedural
 .pageTop {
@@ -101,6 +95,8 @@ body {
                 list-style-type: none;
 
                 a {
+                    //border: 1px solid black;
+                    user-select: none;
                     position: relative;
                     text-align: right;
                     text-decoration: none;
@@ -112,12 +108,15 @@ body {
 
                     &:hover {
                         color: #fff;
-                        bottom: 0.175rem;
+                        bottom: 0.025rem;
                         text-shadow: 0 0.4rem 0.125rem rgba(0, 0, 0, 0.2);
                     }
 
+                    &:active {
+                        border: 1px solid black;
+                    }
+
                     li {
-                        //border: 1px solid black;
                         width: 100%;
                     }
                 }
@@ -372,22 +371,18 @@ body {
                         grid-template-columns: auto auto auto;
 
                         .card {
+                            z-index: 5;
                             background-color: rgba(255, 255, 255, 0.125);
                             border-radius: 5px;
                             width: 200px;
-                            margin: 1.5rem 0;
+                            margin: 2rem 0;
                             padding: 0.5rem;
                             padding-bottom: 1rem;
                             box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 
-                            @media only screen and (max-width: 600px) {
-                                margin: 1rem 0;
-                            }
-
-
                             &:hover {
+                                margin: 1.9rem 0;
                                 animation: jiggle 2s infinite linear;
-                                transform-origin: center;
                                 transform: scale(1.125, 1.125);
                                 border: 1px solid rgba(255, 255, 255, 0.5);
                                 border-top-color: rgba(255, 255, 255, 0.95);
